# graph2mat

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: docs_to_pages.yaml  pypi.yaml
docs/: Internals of e3nn_matrix presentation.ipynb  conf.py  index.rst  server.rst
docs/_static/css/: custom_styles.css
docs/_templates/autosummary/: custom-class-template.rst  custom-module-template.rst
docs/api/: description.rst  full_api.rst  index.rst
docs/api/api-generated/: graph2mat.AtomicTableWithEdges.rst  graph2mat.BasisConfiguration.rst  graph2mat.BasisMatrixData.rst  graph2mat.BasisTableWithEdges.rst  graph2mat.Graph2Mat.interactions.rst  graph2mat.Graph2Mat.rst  graph2mat.Graph2Mat.self_interactions.rst  graph2mat.Graph2Mat.summary.rst  graph2mat.Graph2Mat.unique_basis.rst  graph2mat.OrbitalConfiguration.rst  graph2mat.PointBasis.rst  graph2mat.bindings.e3nn.E3nnEdgeMessageBlock.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.T_destination.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.call_super_init.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.dump_patches.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.interactions.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.self_interactions.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.summary.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.training.rst  graph2mat.bindings.e3nn.E3nnGraph2Mat.unique_basis.rst  graph2mat.bindings.e3nn.E3nnInteraction.rst  graph2mat.bindings.e3nn.E3nnSeparateTSQNodeBlock.rst  graph2mat.bindings.e3nn.E3nnSimpleEdgeBlock.rst  graph2mat.bindings.e3nn.E3nnSimpleNodeBlock.rst  graph2mat.bindings.e3nn.irreps_tools.rst  graph2mat.bindings.e3nn.modules.edge_operations.rst  graph2mat.bindings.e3nn.modules.graph2mat.rst  graph2mat.bindings.e3nn.modules.matrixblock.rst  graph2mat.bindings.e3nn.modules.node_operations.rst  graph2mat.bindings.e3nn.modules.preprocessing.rst  graph2mat.bindings.e3nn.modules.rst  graph2mat.bindings.e3nn.rst  graph2mat.bindings.rst  graph2mat.bindings.torch.TorchBasisMatrixData.rst  graph2mat.bindings.torch.TorchBasisMatrixDataset.rst  graph2mat.bindings.torch.TorchGraph2Mat.T_destination.rst  graph2mat.bindings.torch.TorchGraph2Mat.call_super_init.rst  graph2mat.bindings.torch.TorchGraph2Mat.dump_patches.rst  graph2mat.bindings.torch.TorchGraph2Mat.interactions.rst  (+54 more)
docs/tutorials/: Batching.ipynb  Computing a matrix.ipynb  Fitting a single matrix.ipynb  index.rst
docs/tutorials/applications/: index.rst  siesta_fitting.rst
docs/tutorials/cli/: index.rst  siesta_MDaccel.rst
docs/tutorials/low_level/: Batching.ipynb  Computing a matrix.ipynb  Fitting a single matrix.ipynb  Untitled.ipynb  index.rst
docs/tutorials/python_api/: Batching.ipynb  Computing a matrix.ipynb  Fitting matrices.ipynb  MACE+Graph2mat.ipynb  index.rst
docs/tutorials/siesta_fitting/: index.rst  siesta_fitting.rst
e3nn_matrix/: __init__.py  conftest.py
e3nn_matrix/bindings/mace/: __init__.py
e3nn_matrix/bindings/mace/lit/: __main__.py  cli.py  model.py
e3nn_matrix/cli/: cli.py
e3nn_matrix/cli/models/mace/: cli.py
e3nn_matrix/cli/siesta/: main_cli.py  md.py
e3nn_matrix/data/: __init__.py  _sorting_stuff.py  _sparse.py  basis.py  batch_utils.py  configuration.py  irreps_tools.py  metrics.py  neighborhood.py  periodic_table.py  processing.py  sparse.py  table.py
e3nn_matrix/data/matrices/: __init__.py  basis_matrix.py  density_matrix.py  orbital_matrix.py
e3nn_matrix/data/matrices/physics/: density_matrix.py  orbital_matrix.py
e3nn_matrix/data/tests/: test_basis.py  test_irreps_tools.py  test_metrics.py  test_sparse.py
e3nn_matrix/models/: __init__.py
e3nn_matrix/models/mace/: __init__.py  models.py
e3nn_matrix/models/mace/lit/: __init__.py  model.py
e3nn_matrix/scripts/lit/: __init__.py  callbacks.py  cli.py  data.py  model.py  trainer.py
e3nn_matrix/scripts/server/: predictions_server.py
e3nn_matrix/scripts/siesta/: __main__.py  analyze_MD.py
e3nn_matrix/tools/: __init__.py
e3nn_matrix/tools/cli/: cli.py  request.py  serve.py
e3nn_matrix/tools/cli/models/: cli.py
e3nn_matrix/tools/cli/siesta/: md.py
e3nn_matrix/tools/lightning/: __init__.py  callbacks.py  cli.py  data.py  model.py
e3nn_matrix/tools/lightning/models/: mace.py
e3nn_matrix/tools/lightning/tests/: test_equivariance.py  (+1 more)
e3nn_matrix/tools/server/: README.md  __init__.py  api_client.py  extrapolation.py  server_app.py
e3nn_matrix/tools/siesta/: md.py
e3nn_matrix/tools/viz/: __init__.py  sparse_plot.py
e3nn_matrix/torch/: __init__.py  conftest.py  data.py  dataset.py  evaluate.py  load.py
e3nn_matrix/torch/modules/: __init__.py  _misc.py  _symm_product.py  basis_matrix.py  edge_readouts.py  messages.py  node_readouts.py  orbital_matrix.py
e3nn_matrix/torch/tests/: test_orbital_matrix.py
e3nn_matrix/viz/: __init__.py  sparse_plot.py
src/: CMakeLists.txt
src/e3nn_matrix/: CMakeLists.txt
src/e3nn_matrix/data/: CMakeLists.txt  _sparse.py  basis.py  configuration.py  irreps_tools.py  metrics.py  neighborhood.py  node_feats.py  processing.py  sparse.py  table.py
src/e3nn_matrix/models/: __init__.py
src/e3nn_matrix/tools/: __init__.py
src/e3nn_matrix/torch/: conftest.py  data.py  dataset.py  load.py
src/graph2mat/: __init__.py  conftest.py
src/graph2mat/bindings/: __init__.py
src/graph2mat/core/: CMakeLists.txt  __init__.py
src/graph2mat/core/data/: CMakeLists.txt  __init__.py  _sparse.py  basis.py  configuration.py  irreps_tools.py  metrics.py  node_feats.py  processing.py  sparse.py  table.py
src/graph2mat/core/data/matrices/: __init__.py  basis_matrix.py
src/graph2mat/core/data/matrices/physics/: orbital_matrix.py
src/graph2mat/core/data/tests/: test_basis.py  test_configuration.py  test_irreps_tools.py  test_metrics.py  test_processing.py  test_sparse.py  test_table.py
src/graph2mat/core/modules/: CMakeLists.txt  __init__.py  _labels_resort.py  graph2mat.py  matrixblock.py
src/graph2mat/core/modules/tests/: test_graph2mat.py
src/graph2mat/models/: __init__.py  lode.py  mace.py
(+123 files in other folders)
