[metadata]
name = e3nn_matrix
version = attr: e3nn_matrix.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
    e3nn==0.5.0
    numpy
    scipy
    ase
    sisl

[options.entry_points]
console_scripts =
    matrixmace = e3nn_matrix.bindings.mace.lit.__main__:cli_main
