[metadata]
name = e3nn_matrix
version = attr: e3nn_matrix.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
    e3nn>=0.5.0
    numpy
    scipy
    ase
    sisl>=0.13.0
    typer[all]
    torch
    torch_geometric

[options.extras_require]
server = pyyaml; fastapi; uvicorn; jinja2
analysis = plotly; pandas;
lightning = pytorch-lightning; jsonargparse;
siesta = jinja2
tools = pyyaml; fastapi; uvicorn; plotly; pandas; pytorch-lightning; jsonargparse; jinja2
docs = pyyaml; fastapi; uvicorn; plotly; pandas; pytorch-lightning; jsonargparse; jinja2; sphinx; sphinx_autodoc_typehints; sphinx_rtd_theme

[options.entry_points]
console_scripts =
    e3mat = e3nn_matrix.tools.cli.cli:app
