

[options.extras_require]
server = pyyaml; fastapi; uvicorn; jinja2
analysis = plotly; pandas;
lightning = pytorch-lightning; jsonargparse;
siesta = jinja2
tools = pyyaml; fastapi; uvicorn; plotly; pandas; pytorch-lightning; jsonargparse; jinja2
docs = pyyaml; fastapi; uvicorn; plotly; pandas; pytorch-lightning; jsonargparse; jinja2; sphinx; sphinx_autodoc_typehints; sphinx_rtd_theme; nbsphinx; ipykernel
